# cvxgenrust

./: .gitignore  Makefile  README.md  pyproject.toml
cvxgenrust/: __init__.py  cgr.py  generator.py
cvxgenrust/templates/: Cargo.toml.tmpl  cgr_README.md.tmpl  cgr___init__.py  cgr_lib.rs.tmpl  cgr_solve.py.tmpl  cgr_solve.rs.tmpl  cgr_solver.py.tmpl  clarabel_canonical_method.rs.tmpl  clarabel_ffi.rs.tmpl  clarabel_solve_method.rs.tmpl  runtime.rs
tests/: support.py  test_functional.py  test_metadata.py  test_numerical.py
